--- a/source/markup/pug/blocks/banner.pug
+++ b/source/markup/pug/blocks/banner.pug
@@ -7,12 +7,12 @@ section(class="banner")
     Квартирные переезды
   p(class="banner_subtitle").
     По Москве и области
-  a(class="banner__order-button action-button" href="#order")
+  a(class="banner__order-button action-button" href="#callback")
     span.
       Заказать
   ul(class="banner__features-list list-reset")
     +feature("Более 800 <br> переездов", "banner__feature--track")
     +feature("Бережная <br> упаковка", "banner__feature--package")
     +feature("Фиксированная <br> цена", "banner__feature--money")
-  a(class="banner__phone-button" href="#order").
+  a(class="banner__phone-button" href="#callback").
     Заказать звонок
