--- a/source/markup/pug/blocks/main.pug
+++ b/source/markup/pug/blocks/main.pug
@@ -1,10 +1,10 @@
 main
   h1(class="visually-hidden").
     MOVEE - компания для помощи в перездах
-  include ../blocks/banner
-  include ../blocks/description
-  include ../blocks/cost
-  include ../blocks/autopark
-  include ../blocks/reviews
-  include ../blocks/callback
-  include ../blocks/placement
+  include banner
+  include description
+  include cost
+  include autopark
+  include reviews
+  include callback
+  include placement
