--- a/source/markup/pug/blocks/placement.pug
+++ b/source/markup/pug/blocks/placement.pug
@@ -1,6 +1,6 @@
 include ../mixins/social-list.pug
 
-section(class="placement")
+section(class="placement" id="placement")
   h2(class="visually-hidden").
     Наше расположение
   div(class="placement__map-wrapper")
