--- a/source/markup/pug/blocks/reviews.pug
+++ b/source/markup/pug/blocks/reviews.pug
@@ -77,7 +77,7 @@ mixin reviews-list()
         ).
           Читать полностью
 
-section(class="reviews")
+section(class="reviews" id="reviews")
   h2(class="reviews__title").
     Отзывы
   +reviews-list()
