--- a/source/markup/pug/pages/index.pug
+++ b/source/markup/pug/pages/index.pug
@@ -9,4 +9,5 @@ html(lang="ru")
     include ../blocks/header
     include ../blocks/main
     include ../blocks/footer
+    include ../blocks/popup
     script(src="js/app.min.js")
