--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -13,6 +13,9 @@
 @import "blocks/cost.scss";
 @import "blocks/autopark.scss";
 @import "blocks/reviews.scss";
+@import "blocks/callback-form.scss";
 @import "blocks/callback.scss";
 @import "blocks/placement.scss";
 @import "blocks/footer.scss";
+@import "blocks/info-block.scss";
+@import "blocks/popup.scss";
