--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -13,6 +13,7 @@ $duration: 0.5s;
   --color-gray: #808080;
   --color-gray-2: #675D5D;
   --color-gray-3: #EBEBEB;
+  --color-gray-4: rgba(217, 215, 215, 0.8);
   --color-dark: #333333;
   --color-red: #FF352B;
   --color-white: #FFFFFF;
