Script for order-button of autopark block has been added

--- a/source/markup/pug/blocks/autopark.pug
+++ b/source/markup/pug/blocks/autopark.pug
@@ -53,6 +53,7 @@ mixin slides-list(type)
               order-button
             `
             href=`#callback`
+            data-offer-id=type.offers[i].id
           ).
             Заказать
 
