--- a/source/markup/pug/blocks/footer.pug
+++ b/source/markup/pug/blocks/footer.pug
@@ -41,9 +41,9 @@ footer(class="footer")
       ).
         hello@movee.ru
     li(class="footer__block")
-      button(
+      a(
         class="footer__call-button call-button"
-        type="button"
+        href="#callback"
       ).
         Обратный звонок
       a(
