Popup for callback form has been added

--- a/source/markup/pug/mixins/callback-form.pug
+++ b/source/markup/pug/mixins/callback-form.pug
@@ -1,5 +1,5 @@
 mixin callback-form(modificator)
-  form(class="callback-form" method="POST" action="https://echo.htmlacademy.ru/")
+  form(class="callback-form" method="POST" action="/callback-no-js.html")
     div(class="callback-form__field callback-form__field--no-js")
       input(
         type="text"
