--- a/source/styles/common.scss
+++ b/source/styles/common.scss
@@ -120,40 +120,48 @@ input[type="radio"].visually-hidden {
 
 @keyframes fadeInLeft {
   0% {
+    @include hidden();
     transform: translateX(-100vw);
   }
 
   100% {
+    @include visible();
     transform: translateX(0);
   }
 }
 
 @keyframes fadeInRight {
   0% {
+    @include hidden();
     transform: translateX(100vw);
   }
 
   100% {
+    @include visible();
     transform: translateX(0);
   }
 }
 
 @keyframes fadeOutLeft {
   0% {
+    @include visible();
     transform: translateX(0);
   }
 
   100% {
+    @include hidden();
     transform: translateX(-100vw);
   }
 }
 
 @keyframes fadeOutRight {
   0% {
+    @include visible();
     transform: translateX(0);
   }
 
   100% {
+    @include hidden();
     transform: translateX(100vw);
   }
 }
