--- a/source/styles/mixins.scss
+++ b/source/styles/mixins.scss
@@ -15,3 +15,19 @@
   border: none;
   outline: none;
 }
+
+@mixin visible {
+  position: relative;
+  z-index: 1;
+
+  opacity: 1;
+  visibility: visible;
+}
+
+@mixin hidden {
+  position: relative;
+  z-index: -1;
+
+  opacity: 0;
+  visibility: hidden;
+}
