Mistake has made

--- a/source/markup/pug/pages/callback-no-js.pug
+++ b/source/markup/pug/pages/callback-no-js.pug
@@ -7,7 +7,7 @@ html(lang="ru")
     title MOVEE - Перевозки
   body
     main(class="info-block")
-      h1(class="info-block__title").
+      h1(class="info-block__title" id="fail-travis-id").
         Спасибо, что выбрали нашу компанию.
-      p(class="info-block__title").
+      p(class="info-block__title" id="fail-travis-id").
         В ближийшее время мы свяжемся с вами.
