--- a/source/styles/blocks/banner.scss
+++ b/source/styles/blocks/banner.scss
@@ -23,7 +23,7 @@
   width: 248px;
   height: 396px;
 
-  background-image: url("../img/human.png");
+  background-image: url("../img/human.webp");
   background-size: cover;
 
   transform: translateX(-46%);
@@ -181,7 +181,7 @@
     height: 300px;
     margin-left: 207px;
 
-    background-image: url("../img/wagon.png");
+    background-image: url("../img/wagon.webp");
     filter: blur(3px);
   }
 
