--- a/source/markup/pug/pages/index.pug
+++ b/source/markup/pug/pages/index.pug
@@ -1,8 +1,23 @@
+-
+  const preloadsFonts = [
+    "Montserrat-Bold.woff2",
+    "Montserrat-Medium.woff2",
+    "Montserrat-Regular.woff2",
+    "Montserrat-SemiBold.woff2"
+  ];
+
 doctype html
 html(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(
+      name="description"
+      content=`На сайте представлена информация об услугах связанных с переездом,
+         которые оказывает компания Movee`
+    )
+    each value in preloadsFonts
+      link(rel="preload" href=`fonts/${value}` as="font" type="font/woff2" crossorigin="anonymous")
     link(rel="stylesheet" href="css/style.min.css")
     title MOVEE - Перевозки
   body
