Styles was fixed

--- a/source/markup/pug/blocks/header.pug
+++ b/source/markup/pug/blocks/header.pug
@@ -18,8 +18,8 @@ header(class="header header--no-js" id="header")
   )
     span.
       Изменить видимость меню
-  nav(class="header__nav header__nav--no-js" id="nav-js")
-    ul(class="header__nav-list list-reset")
+  nav(class="header__nav")
+    ul(class="header__nav-list header__nav-list--no-js list-reset" id="nav-js")
       +nav-item("#cost", "Цены")
       +nav-item("#autopark", "Автопарк")
       +nav-item("#reviews", "Отзывы")
