--- a/source/styles/blocks/autopark.scss
+++ b/source/styles/blocks/autopark.scss
@@ -359,8 +359,8 @@
     display: block;
     min-width: 20px;
     min-height: 40px;
-    margin: 0 20px;
-    padding: 0;
+    margin: 0;
+    padding: 0 20px;
 
     border: none;
     background-color: transparent;
